# the-herald

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PR_RULES.md  README.md  lambda-requirements.txt  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: build-image.yml  docker-publish.yml  lint-format.yml  main.yml  pr.yml  push-docker-image.yml  syntax-check.yml  terraform-apply.yml  unit-sec-test.yml
app/: app.py  main.py  models.py
app/clients/: discord.py  google.py  redis.py
app/config/: discord.py  logger.py
app/services/: calendar.py  discord.py  newsletter.py  prompt.py  resume.py
app/static/: config.yaml
app/utils/: scheduler.py  secrets.py
docs/: discord-rate-limiting.md
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  ingress.yaml  service.yaml
lambda/: lambda_handler.py
lambda/app/: models.py
lambda/app/clients/: discord.py  (+2 more)
lambdas/discord-bot/: Dockerfile  requirements.txt
lambdas/job-feed-parser/: requirements.txt
lambdas/job-poster/: Dockerfile  requirements.txt
lambdas/newsletters/: Dockerfile
lambdas/security-newsletter/: Dockerfile  requirements.txt
lambdas/youtube-subscriber/: Dockerfile
scripts/: .verification.md  README.md  build_deployment_package.sh  build_layer.sh
terraform/: README.md  data.tf  main.tf  provider.tf  variables.tf
terraform/core/: locals.tf  main.tf  provider.tf  variables.tf
terraform/repositories/: locals.tf  main.tf  provider.tf  variables.tf
tests/: test_discord_service.py  test_lambda_handler.py  test_parameter_store.py
(+21 files in other folders)
