[project]
name = "the-herald"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "astroid==4.0.2",
    "attrs==25.4.0",
    "black==26.3.0",
    "boto3==1.42.64",
    "cachetools==7.0.5",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "dill==0.4.1",
    "discord-py==2.7.1",
    "dotenv==0.9.9",
    "feedparser==6.0.12",
    "frozenlist==1.8.0",
    "idna==3.11",
    "invoke>=2.2.1",
    "isort==8.0.1",
    "mccabe==0.7.0",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "packaging==26.0",
    "pathspec==1.0.4",
    "pip>=26.0.1",
    "platformdirs==4.9.4",
    "propcache==0.4.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pylint==4.0.5",
    "pyparsing==3.3.2",
    "python-dotenv==1.2.2",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "ratelimit==2.2.1",
    "requests==2.32.5",
    "sgmllib3k==1.0.0",
    "sniffio==1.3.1",
    "tomlkit==0.14.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzlocal==5.3.1",
    "urllib3==2.6.3",
    "xmltodict==1.0.4",
    "yarl==1.23.0",
]
